push to preserve in any case

--- a/launch_scripts/cluster.env
+++ b/launch_scripts/cluster.env
@@ -6,23 +6,26 @@
 
 # URI addres for the SystemDS jar file on S3
 SYSTEMDS_JAR_URI=s3://ropt-experiments/systemds-3.3.0-SNAPSHOT.jar
-# DML script path (use s3:// URI schema for remote scripts in S3)
-SYSTEMDS_PROGRAM=s3://ropt-experiments/scripts/PCA.dml
+# DML script path (use s3:// URI schema for remote scripts in S3) #s3://ropt-experiments/scripts/PCA.dml
+SYSTEMDS_PROGRAM=s3://ropt-experiments/scripts/genRandDataLargeThin.dml
+#s3://ropt-experiments/scripts/PCA.dml
 # Set the the file path arguments with adapted URI address
 # for the actual file location and always s3:// schema
 # comma separated values
 SYSTEMDS_ARGS=
 # comma separated key=value pairs
-SYSTEMDS_NVARGS=fileX=s3://ropt-experiments/datasets/smallX.csv,fileXReduced=s3://ropt-experiments/outputs/smallX.csv,fileC=s3://ropt-experiments/outputs/smallC.csv,fileC2=s3://ropt-experiments/outputs/smallC2.csv,fileS2=s3://ropt-experiments/outputs/smallS2.csv
-
+SYSTEMDS_NVARGS=outputDir=s3://ropt-experiments/datasets/
+#fileX=s3://ropt-experiments/datasets/thinLargeX.csv,fileXReduced=s3://ropt-experiments/outputs/XReduced.csv,fileC=s3://ropt-experiments/outputs/C.csv,fileC2=s3://ropt-experiments/outputs/C2.csv,fileS2=s3://ropt-experiments/outputs/S2.csv
+#L2SVM and Linreg fileX=s3://ropt-experiments/datasets/mediumX.csv,fileY=s3://ropt-experiments/datasets/mediumY.csv,fileW=s3://ropt-experiments/outputs/mediumW.csv
+#PCA fileX=s3://ropt-experiments/datasets/largeX.csv,fileXReduced=s3://ropt-experiments/outputs/XReduced.csv,fileC=s3://ropt-experiments/outputs/C.csv,fileC2=s3://ropt-experiments/outputs/C2.csv,fileS2=s3://ropt-experiments/outputs/S2.csv
 # AWS  specific -------------------------
 
 # Inspect the version difference before changing to version defferent form 7.3.0
 EMR_VERSION="emr-7.3.0"
 # output file of the resource optimization: hardware configurations
-INSTANCE_CONFIGS=../configs/baseline_2_graviton_small/emr_instance_groups.json
+INSTANCE_CONFIGS=../configs/baseline_2_graviton_large/emr_instance_groups.json
 # output file of the resource optimization: Spark configurations
-SPARK_CONFIGS=../configs/baseline_2_graviton_small/emr_configurations.json
+SPARK_CONFIGS=../configs/baseline_2_graviton_large/emr_configurations.json
 # existing SSH key (not created automatically)
 KEYPAIR_NAME="SystemDS_Key"
 # Choose the same region as at executing resource optimizer
@@ -45,11 +48,11 @@ LOG_URI=s3://ropt-experiments/logs/emr/
 # (number) - if 0 the cluster will be terminated automatically after program execution
 # - if greater than 0 the cluster will be terminated automatically after the given number of second in state idle
 # - if less than 0 no automatic temrination rules will be applied
-AUTO_TERMINATION_TIME=0
+AUTO_TERMINATION_TIME=-1
 
 # Automatic configurations (read only for users) -------------
 
 # Current EMR Cluster ID
-CLUSTER_ID=j-2VN47W49G6LYM
+CLUSTER_ID=j-2GP8YPZAIZYVT
 # Public DNS name of the moster node in the current cluster
-CLUSTER_URL=ec2-3-236-18-219.compute-1.amazonaws.com
+CLUSTER_URL=ec2-3-210-184-101.compute-1.amazonaws.com
