--- a/options-pnmf.properties
+++ b/options-pnmf.properties
@@ -34,7 +34,7 @@ OUTPUT_FOLDER=output
 # local inputs to that would be later read from s3;
 # allows to save accessing s3 objects + metadata for speedup and avioding the need of setting local AWS credentials;
 # define them as comma separated key=value pairs (no spaces)
-LOCAL_INPUTS=s3://data/X.csv=tests/resources/data/SmallDenseX.csv,s3://data/Y.csv=tests/resources/data/SmallY.csv
+LOCAL_INPUTS=s3://data/X.csv=tests/resources/data/LargeDenseX.csv
 
 # Options for the enumeration process ------------------------
 
@@ -42,7 +42,7 @@ LOCAL_INPUTS=s3://data/X.csv=tests/resources/data/SmallDenseX.csv,s3://data/Y.cs
 ENUMERATION=prune
 # specifies optimization strategy (scoring function);
 # it should be one of the following: 'costs', 'time', 'price'; default 'costs'
-OPTIMIZATION_FUNCTION=costs
+OPTIMIZATION_FUNCTION=time
 # specifies the weighting factor for the optimization function 'costs',
 # value should be always between 0 and 1 (default is 0.01),
 # bigger values prioritize the time over the price
