--- a/launch_scripts/single_node.env
+++ b/launch_scripts/single_node.env
@@ -4,19 +4,20 @@
 
 # Program specific --------------------------------
 
-# DML script path (use s3a:// URI schema for remote scripts in S3)
-SYSTEMDS_PROGRAM=s3a://ropt-experiments/scripts/PNMF.dml
+# DML script path (use s3a:// URI schema for remote scripts in S3) #s3a://ropt-experiments/scripts/L2SVM.dml
+SYSTEMDS_PROGRAM=s3a://ropt-experiments/scripts/PCA.dml
 # Set the the file path arguments with adapted URI address
 # for the actual file location and always s3a:// schema
 # comma separated values
 SYSTEMDS_ARGS=
 # comma separated key=value pairs
-SYSTEMDS_NVARGS=fileX=s3a://ropt-experiments/datasets/largeX.csv,fileW=s3a://ropt-experiments/outputs/W.csv,fileH=s3a://ropt-experiments/outputs/H.csv
+SYSTEMDS_NVARGS=fileX=s3a://ropt-experiments/datasets/perfX.csv,fileXReduced=s3a://ropt-experiments/outputs/XReduced.csv,fileC=s3a://ropt-experiments/outputs/C.csv,fileC2=s3a://ropt-experiments/outputs/C2.csv,fileS2=s3a://ropt-experiments/outputs/S2.csv
+# L2SVM/Linreg fileX=s3a://ropt-experiments/datasets/mediumX.csv,fileY=s3a://ropt-experiments/datasets/mediumY.csv,fileW=s3a://ropt-experiments/outputs/mediumW.csv
 
 # AWS  specific -------------------------
 
 # output file of the resource optimization
-CONFIGURATIONS=../configs/baseline_1_intel_large/ec2_configurations.json
+CONFIGURATIONS=../configs/baseline_1_graviton_small/ec2_configurations.json
 # existing SSH key (not created automatically)
 KEYPAIR_NAME="SystemDS_Key"
 # Choose the same region as at executing resource optimizer
@@ -30,7 +31,7 @@ SECURITY_GROUPS="launch-wizard-5"
 # Set new name if switch between disabled and enabled cloud watch agent
 INSTANCE_PROFILE_NAME=SystemDSIntanceProfileEC2
 IAM_ROLE_NAME=AllowCloudWatchAndS3AccessOnEC2
-# S3 folder URI for landing of log files (without final '/')
+# S3 folder URI for landing of log files (without final '/', always s3:// schema)
 LOG_URI=s3://ropt-experiments/logs/ec2
 # Cloud watch agent configuration parameter in SSM
 # if empty, cloud watch agent is disabled
@@ -39,10 +40,10 @@ CLOUDWATCH_CONFIGS=cloud-watch-configs
 # Execution specific -------------------------
 
 # (true/false) if true the instane should be terminated automatically after program execution
-AUTO_TERMINATION=true
+AUTO_TERMINATION=false
 
 # Automatic configurations (read only for users) -------------
 
-INSTANCE_TYPE=m6i.16xlarge
-INSTANCE_ID=i-04b10da0204f71aa6
-PUBLIC_DNS_NAME=ec2-34-204-183-102.compute-1.amazonaws.com
+INSTANCE_TYPE=m6g.4xlarge
+INSTANCE_ID=i-071b515cc8d64c80e
+PUBLIC_DNS_NAME=ec2-98-81-17-231.compute-1.amazonaws.com
