--- a/options-l2svm.properties
+++ b/options-l2svm.properties
@@ -34,23 +34,23 @@ OUTPUT_FOLDER=output
 # local inputs to that would be later read from s3;
 # allows to save accessing s3 objects + metadata for speedup and avioding the need of setting local AWS credentials;
 # define them as comma separated key=value pairs (no spaces)
-LOCAL_INPUTS=s3://data/X.csv=tests/resources/data/SmallDenseX.csv,s3://data/Y.csv=tests/resources/data/SmallY.csv
+LOCAL_INPUTS=s3://data/X.csv=tests/resources/data/LargeDenseX.csv,s3://data/Y.csv=tests/resources/data/LargeY.csv
 
 # Options for the enumeration process ------------------------
 
 # specifies enumeration strategy; it should be one of the following: 'grid', 'interest', 'prune'; default 'grid'
-ENUMERATION=prune
+ENUMERATION=grid
 # specifies optimization strategy (scoring function);
 # it should be one of the following: 'costs', 'time', 'price'; default 'costs'
-OPTIMIZATION_FUNCTION=costs
+OPTIMIZATION_FUNCTION=price
 # specifies the weighting factor for the optimization function 'costs',
-# value should be always between 0 and 1 (default is 0.01),
+# value should be always between 0 and 1 (default is 0.01 and a lower value tend to prioritize the time too much),
 # bigger values prioritize the time over the price
-COSTS_WEIGHT=0.0099
+COSTS_WEIGHT=0.002
 # specifies constraint for maximum execution time; required and only relevant for OPTIMIZATION_FUNCTION=price
-MAX_TIME=1000000
+MAX_TIME=4000
 # specifies constraint for maximum price on AWS for execution; required and only relevant for OPTIMIZATION_FUNCTION=time
-MAX_PRICE=100
+MAX_PRICE=4
 # specifies the limit of (virtual) CPU cores allowed for evaluation;
 # this corresponds to the most common VM service quota set by cloud providers
 CPU_QUOTA=256
